# yacx-ocal-comparison

./: .gitignore  .gitmodules  CMakeLists.txt
src/: sumarray.cpp
